Fix over-sized input fields on iOS

--- a/QWC2Components/plugins/style/Print.css
+++ b/QWC2Components/plugins/style/Print.css
@@ -55,6 +55,7 @@
     flex: 1;
     min-width: 0;
     width: 0;
+    margin: 0;
 }
 
 #Print table.options-table textarea {
